编辑器样式修改

--- a/Mingshi/Tpl/Index/tougao.html
+++ b/Mingshi/Tpl/Index/tougao.html
@@ -99,6 +99,7 @@ max-height:560px;"  name="info[content]"></textarea>
                     content = K.create('#content',{
 			        allowFileManager : true,
 			        autoHeightMode : true,
+                    resizeType:0,
 		            fterCreate : function() {
 				    this.loadPlugin('autoheight');
 			       }
