--- a/admin/Tpl/Article/add.html
+++ b/admin/Tpl/Article/add.html
@@ -104,6 +104,7 @@
                     content = K.create('#content',{
 			allowFileManager : true,
 			autoHeightMode : true,
+            resizeType:0,
 			afterCreate : function() {
 				this.loadPlugin('autoheight');
 			},
