--- a/Mingshi/Tpl/Member/regms.html
+++ b/Mingshi/Tpl/Member/regms.html
@@ -39,7 +39,7 @@ body{ font-size:12px;}
 			  <div class="" >
             <div class="zc_zuo">
 			
-			   <form method="post" action="__URL__/insert" id='form1' name='fm'>
+			   <!-- <form method="post" action="__URL__/insert" id='form1' name='fm'> -->
             	<dl class="xinzc_dl">
                 	<dt class="letter">邀请码：</dt>
                     <dd>
@@ -120,7 +120,7 @@ body{ font-size:12px;}
 					</dd>
                 </dl>
 				  <input type="hidden" name="tid" value="2" />
-			  </form>
+			  <!-- </form> -->
 			    <div class="zc_check"><input type="checkbox" class="fl" /><p class="fl">我已阅读并同意<a href="#" class="zc_colo">《名师.SO用户使用协议》</a></p></div>
                 <div class="zc_login">
 				<a href="javascript:void(0);" class="zc_mr submit">免费注册</a>
@@ -162,7 +162,8 @@ body{ font-size:12px;}
 </div>
 
 <script type="text/javascript">
- $(".submit").click(function(){
+$(function(){
+    $(".submit").click(function(){
  
          <if condition="ACTION_NAME neq 'edit'">
             if($.trim($("input[name='yqm_sn']").val())==''){
@@ -173,17 +174,22 @@ body{ font-size:12px;}
             popup.alert("电话不能为空");
             return false;
             }
-			if($.trim($("input[name='password']").val())==''){
+            if($.trim($("input[name='password']").val())==''){
             popup.alert("密码不能为空");
             return false;
             }
-			if($.trim($("input[name='confirmpwd']").val())==''){
+            if($.trim($("input[name='confirmpwd']").val())==''){
             popup.alert("请确认密码");
             return false;
             }
             </if>
-            commonAjaxSubmit('insert');
+            
+            
        });
+
+
+});
+ 
 </script>
 </body>
 </html>
