--- a/Mingshi/Tpl/Member/regms.html
+++ b/Mingshi/Tpl/Member/regms.html
@@ -20,6 +20,7 @@
 <script src="__PUBLIC__/js/calendar/calendar.js"></script>
 <script language="javascript" src="__PUBLIC__/js/common.js"></script>
 <script src="__PUBLIC__/js/reg.js"></script>
+<script src="__PUBLIC__/js/layer/layer.min.js"></script>
 <style type="text/css"><!--
 body{ font-size:12px;}
 --></style>
@@ -183,6 +184,33 @@ $(function(){
             return false;
             }
             </if>
+            /*教师注册信息的收集*/
+                var yqm_sn=$("#yqm_sn").val();
+                var name=$("#uname").val();
+                var phone=$("#phone").val();
+                var obj_id=$("select[name='class']").val();
+                var classid=$("select[name='obj']").val();
+                var xinzc_input=$(".xinzc_input").val();
+                var province=$("#province").val();
+                var city=$("#city").val();
+                var area=$("#area").val();
+                var pwd=$("#password").val();
+                 $.ajax({
+                    url:'__URL__/add_teacher',
+                    type:'POST',
+                    dataType:'json',
+                    cache:false,
+                    data:{"uname":name,"phone":phone,"classid":classid,"province":province,"city":city,"area":area,"pwd":pwd,"obj_id":obj_id,"yqm_sn":yqm_sn},
+                    success:function(msg){
+                        if(msg==1){
+                            layer.alert('恭喜您,注册成功',2,'注册信息', function(){ 
+                              window.location.href="__APP__/index/login";
+                            });
+                        }else{
+                            layer.alert('很遗憾,注册失败',2,'注册信息', function(){});
+                        }
+                    }
+                });
             
             
        });
