--- a/admin/Tpl/Member/editMember.html
+++ b/admin/Tpl/Member/editMember.html
@@ -64,10 +64,11 @@
                             </tr>
                         </table>
                         <input type="hidden" name="aid" value="{ms:$info.aid}"/>
+                         <button class="btn submit">提交</button>
                     </form>
-                    <div class="commonBtnArea">
+                   <!--  <div class="commonBtnArea">
                         <button class="btn submit">提交</button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
     <div class="clear"></div>
