--- a/admin/Tpl/Access/nodelist.html
+++ b/admin/Tpl/Access/nodelist.html
@@ -52,7 +52,7 @@
                                 <td edit="0" fd="sort">{ms:$vo.sort}</td>
                                 <td>{ms:$vo.level}</td>
                                 <td>{ms:$vo.statusTxt}</td>
-                                <td>[ <a href="javascript:void(0);" class="opStatus" val="{ms:$vo.status}">{ms:$vo.chStatusTxt}</a> ] [ <a href="__URL__/editNode?id={ms:$vo.id}" class="edit">编辑</a> ] [ <a link="__URL__/delNode/id/{ms:$vo['id']}" href="javascript:void();" name="{ms:$vo['name']}" class="del" onclick="delarea();" >删除</a> ]</td>
+                                <td>[ <a href="javascript:void(0);" class="opStatus" val="{ms:$vo.status}">{ms:$vo.chStatusTxt}</a> ] [ <a href="__URL__/editNode?id={ms:$vo.id}" class="edit">编辑</a> ] [ <a  name="{ms:$vo['name']}" class="del" tid="{ms:$vo.id}" >删除</a> ]</td>
                             </tr>
                         </volist>
                     </table>
@@ -62,15 +62,26 @@
         <include file="Common:foot" />
 <script type="text/javascript">
     $(function(){
-        $(".del").click(function(){ 
-            var delLink=$(this).attr("link"); 
-            popup.confirm('你真的打算删除【<b>'+$(this).attr("name")+'</b>】吗?','温馨提示',function(action){ 
-                if(action == 'ok'){ 
-                    top.window.location.href=delLink; 
-                } 
-            }); 
-            return false; 
-        }); 
+       $(".del").click(function(){
+        var id=$(this).attr('tid');
+          if(confirm('删除不可恢复！你确认要删除？')){
+            $.ajax({
+                url:'__URL__/delNode',
+                data:{"id":id},
+                dataType:'json',
+                cache:false,    
+                success:function(msg){
+                    if(msg==1){
+                        alert('删除节点成功');
+                    }else{
+                       alert('删除节点失败'); 
+                    }
+                }
+            });
+          }else{
+           return false;
+          }
+       });
     });
 </script>
         <script type="text/javascript">
