--- a/Mingshi/Tpl/Member/regjz.html
+++ b/Mingshi/Tpl/Member/regjz.html
@@ -93,15 +93,15 @@ body{ font-size:12px;}
 				   
 				    <dd class="zc_tab">
                                         <div class="zc_text_box">
-                                               <select id="province" name="province" class="select2">
-                                                    <option value="">市</option>
+                                                <select id="province" name="province" class="select2">
+                                                    <!--option value="1">市</option-->
                                                 <volist name="areaData"  id="val">
                                                      <option value="{ms:$val.id}">{ms:$val.name}</option>
                                                 </volist>
-                                                </select>&nbsp;&nbsp;
+                                                </select>&nbsp;&nbsp;&nbsp;
                                                 <select id="city" name="city" class="select2">
                                                     <option value="">区</option>
-                                                </select>&nbsp;&nbsp;
+                                                </select>&nbsp;&nbsp;&nbsp;
                                                 <select id="area" name="area" class="select2">
                                                     <option value="">县</option>
                                                 </select>
