--- a/Mingshi/Tpl/Member/regms.html
+++ b/Mingshi/Tpl/Member/regms.html
@@ -34,7 +34,7 @@ body{ font-size:12px;}
     <div class="content">
         <div class="zc_content bk">
             <div class="zc_title">
-                <div class="zc_left fl"><a href="__URL__/regjz" >家长注册</a><a href="__URL__/regms" class="zc_mo">名师注册</a></div>
+                <div class="zc_left fl"><a href="__URL__/go_reg" >家长注册</a><a href="__URL__/regms" class="zc_mo">名师注册</a></div>
                 <div class="zc_right fr">已有<i>名师.SO</i>账号<a href="index.html" class="zc_ys">登录</a></div>
             </div>
 			  <div class="" >
