--- a/admin/Tpl/Article/add.html
+++ b/admin/Tpl/Article/add.html
@@ -87,7 +87,7 @@
         </tr>
         <tr>
             <th>文章内容：</th>
-            <td><textarea id="content" class="input" style="height: 300px; width:80%;" name="content"></textarea></td>
+            <td><textarea id="content" class="input" style="height:300px; width:800px;" name="content"></textarea></td>
         </tr>
     </table><input type="submit" class="btn submit" value="提交" />
 </form>
