--- a/admin/Tpl/Jz/edit.html
+++ b/admin/Tpl/Jz/edit.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>添加家长信息</title>
+<title>修改家长信息</title>
 <link rel="stylesheet" href="__PUBLIC__/css/admin/style.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang123.css" type="text/css" />
@@ -32,25 +32,37 @@
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="table1">
                             <tr>
                                 <th width="120">账号：</th>
-                                <td><input name="uname" type="text" class="input" size="40" /></td>
+                                <td><input name="uname" type="text" class="input" size="40" value="{ms:$info.uname}" /></td>
+                            </tr>
+                            <tr>
+                                <th width="120">审核：</th>
+                                <td><input type="radio" name="status" value="0" <if condition="$info['status'] eq 0">checked="checked"</if> />未审核
+                                <input type="radio" name="status" value="1" <if condition="$info['status'] eq 0">checked="checked"</if> />已审核</td>
                             </tr>
                             <tr>
                                 <th>新密码：</th>
-                                <td><input class="input" name="password" type="password" size="40" /></td>
+                                <td><input class="input" name="password" type="password" size="40" value="{ms:$info.password}" /></td>
                             </tr>
                             <tr>
                                 <th>手机号：</th>
-                                <td><input class="input" name="phone" type="text" size="40" /></td>
+                                <td><input class="input" name="phone" type="text" size="40" value="{ms:$info.phone}" /></td>
                             </tr>
                             <tr>
                             	<th>常住地区：</th>
                                 <td>
 <div class="zc_text_box">
    <select id="province" name="province" class="select6">
-        <option value="1">北京</option>
+        <option value="0">市</option>
+        <volist name="areaData"  id="val">
+             <option value="{ms:$val.id}" <if condition="$val['id'] eq $info['province']">selected="selected"</if>>{ms:$val.name}</option>
+        </volist>
     </select>&nbsp;&nbsp;&nbsp;
-    <select id="city" name="city" class="select6"></select>&nbsp;&nbsp;&nbsp;
-    <select id="area" name="area" class="select6"></select>
+    <select id="city" name="city" class="select6">
+        <option selected="selected" value="{ms:$city['id']}">{ms:$city['name']}</option>
+    </select>&nbsp;&nbsp;&nbsp;
+    <select id="area" name="area" class="select6">
+        <option selected="selected" value="{ms:$area['id']}">{ms:$area['name']}</option>
+    </select>
 </div>
 				                </td>
                             </tr>
@@ -61,7 +73,7 @@
                                 <td> 
 <select name="classid">
     <volist name="class" id="cli">
-    <option value="{ms:$cli.id}">{ms:$cli.name}</option>
+    <option value="{ms:$cli.id}" <if condition="$cli['id'] eq $info['classid']">selected='selected'</if>>{ms:$cli.name}</option>
     </volist>
 </select>
 								    </td>
@@ -69,21 +81,23 @@
 							    <tr><th>用户级别：</th>
                                  <td>
 <select name="rankid" style="min-width: 80px;">
-    <option value="1" selected="selected">注册用户</option>
-    <option value="2">认证用户</option>
-    <option value="3">VIP用户</option>
+    <option value="1" <if condition="$info.rankid eq 1">selected='selected'</if>>注册用户</option>
+    <option value="2" <if condition="$info.rankid eq 2">selected='selected'</if>>认证用户</option>
+    <option value="3" <if condition="$info.rankid eq 3">selected='selected'</if>>VIP用户</option>
 </select>
 								</td>
                             </tr>
                             </tr>
 							 <tr>
                                 <th>金币：</th>
-                                <td><input  name="coin" class="input" style="min-width: 80px;" value="0" /></td>
+                                <td><input  name="coin" class="input" style="min-width: 80px;" value="{ms:$info.coin}" /></td>
                             </tr>
                             <tr>
                                 <td colspan="2"><button class="btn wyjsubmit">提交</button></td>
                             </tr>
+
                         </table>
+                        <input type="hidden" name="uid" value="{ms:$info.uid}"/> 
                     <!--/form-->
             </div>
         </div>
@@ -94,6 +108,7 @@ $(function(){
 	//表单提交
 	$(".wyjsubmit").click(function(){
 		var uname=$("input[name='uname']").val();
+		var status=$("input[name='status']").val();
 		var password=$("input[name='password']").val();
 		var phone=$("input[name='phone']").val();
 		var classid=$("select[name='classid']").val();
@@ -102,12 +117,13 @@ $(function(){
 		var province=$("select[name='province']").val();
 		var city=$("select[name='city']").val();
 		var area=$("select[name='area']").val();
+		var uid=$("input[name='uid']").val();
 		$.ajax({
-			url:'__URL__/addMem',
+			url:'__URL__/editMem',
 			type:'POST',
 			cache:false,
 			dataType:'JSON',
-			data:{"uname":uname,"password":password,"phone":phone,"classid":classid,"rankid":rankid,"coin":coin,"province":province,"city":city,"area":area},
+			data:{"uname":uname,"status":status,"password":password,"phone":phone,"classid":classid,"rankid":rankid,"coin":coin,"uid":uid,"province":province,"city":city,"area":area},
 			success:function(msg){
 				alert(msg);
 				history.go(-1);  //返回上一页
@@ -116,7 +132,7 @@ $(function(){
 	});
 	
 	//省市区联动
-    //$("#province").change(function(){ 
+    $("#province").change(function(){ 
 		$("#area").empty();
 		$("<option value=\"\">选择县</option>").appendTo("#area");
 		var area = $("#province").val();
@@ -140,7 +156,7 @@ $(function(){
 				}
 			});
 		}
-   // });
+    });
     //根据市查询县
     $("#city").change(function(){
 		var city = $("#city").val();			
