--- a/admin/Tpl/Ls/add.html
+++ b/admin/Tpl/Ls/add.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>添加/编辑老师会员信息</title>
+<title>添加教师信息</title>
 <link rel="stylesheet" href="__PUBLIC__/css/admin/style.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang.css" type="text/css" />
 <link rel="stylesheet" href="__PUBLIC__/css/mstang123.css" type="text/css" />
@@ -26,83 +26,39 @@
  <div class="wapper">
      <include file="Common:left" />
 	  <div id="Right"  class="right">
-          <div class="tab1"> <div class="current">会员管理---<a href="__URL__/add" >添加会员</a>---<a href="__URL__/del" >删除会员</a>---<a href="__URL__/update" >更新会员</a></div></div>
+          <div class="tab1"> <div class="current"><a href="__URL__/index">&gt;&gt;返回教师列表</a></div></div>
 		                  
                     <form action="" method="post">
                         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="table1">
                             <tr>
-                                <th width="120">账号：</th>
-                                <td><input <if condition="ACTION_NAME eq 'editMember'" >disabled="disabled"</if> name="uname" type="text" class="input" size="40" value="{ms:$info.uname}" /></td>
+                                <th width="120">用户名：</th>
+                                <td><input name="uname" type="text" class="input" size="40" /></td>
                             </tr>
                             <tr>
-                                <th>新密码：</th>
-                                <td><input class="input" name="password" type="password" size="40" value="" /></td>
+                                <th>密码：</th>
+                                <td><input class="input" name="password" type="password" size="40" /></td>
                             </tr>
-                            <tr>
-                                <th>状态：</th>
-                                <td>
-                                    <select name="status" style="width: 80px;">
-                                        <if condition="$info.status eq 1">
-                                            <option value="1" selected>通过审核</option>
-                                            <option value="0">未通过审核</option>
-                                            <else/>
-                                            <option value="1">通过审核</option>
-                                            <option value="0" selected>未通过审核</option>
-                                        </if>
-                                    </select>
-                                    如果禁用了将无法登陆本系统
-									 </td>
-                            </tr>
-                            <tr>
-                                <th>用户类别：</th>
+                             <tr>
+                                <th>授课年级：</th>
                                 <td> 
-								       <select name="tid">
-								        <if condition="$info.tid eq 1">
-								         <option value="1" selected>家长</option>
-										  <option value="2"> 老师</option>
-										 <else/>
-										 <option value="1">家长</option>
-										  <option value="2" selected> 老师</option>
-										 </if>
-										 </select>
+<select name="classid">
+    <volist name="class" id="cli">
+    <option value="{ms:$cli.id}">{ms:$cli.name}</option>
+    </volist>
+</select> 
 								    </td>
                             </tr>
 							    <tr>
                                 <th>科目：</th>
                                 <td> 
-								    <select name="obj_id" style="width: 80px;">
-								    	<volist name="sbj" id="vo">
-<option  value="{ms:$vo.id}" <if condition="$vo.id eq $info['obj_id']">selected="selected"</if> >{ms:$vo.subject}</option>
-                                        </volist>
-									</select>
+<select name="obj_id">
+    <volist name="subject" id="sli">
+    <option value="{ms:$sli.id}">{ms:$sli.subject}</option>
+    </volist>
+</select> 
 								</td>
                             </tr>
-							    <tr>
-                                <th>孩子年级：</th>
-                                <td> 
-								        <select name="classid" style="width: 80px;">
-											<if condition="$info.classid eq 0">
-                                              <option value="0">请选择</option>
-                                              <option value="1">一年级</option>
-                                              <option value="2">二年级</option>
-                                              <option value="3">三年级</option>
-                                            <else if condition="$info.classid eq 1"/>
-											    <option value="1" selected>一年级</option>
-                                            	<option value="2">二年级</option>
-											    <option value="3">三年级</option>
-                                            <else if condition="$info.classid eq 2"/>
-												<option value="1">一年级</option>
-                                            	<option value="2" selected>二年级</option>
-											    <option value="3">三年级</option>
-											<else/>
-												 <option value="1" >一年级</option>
-                                            	 <option value="2">二年级</option>
-											     <option value="3" selected>三年级</option>
-                                           </if>
-                                    </select>
-								    </td>
-                            </tr>
-							    <tr><th>用户级别：</th>
+							<tr><th>用户级别：</th>
                                  <td><select name="rankid" style="min-width: 80px;">
 								     <option value="1" selected>注册用户</option>
                                       <option value="2">认证用户</option>
@@ -110,14 +66,21 @@
 								</td>
                             </tr>
                             </tr>
-							    <tr><th>教师身份：</th>
+							 <tr><th>教师身份：</th>
                                  <td><select name="identity" style="min-width: 80px;">
 								     <option value="1" selected>顶级名师</option>
                                      <option value="2">VIP名师</option>
 									 <option value="3">一线名师</option>
                                      <option value="4">机构名师</option>
-                                     <option value="5">名校学生</option></select><br />
-                                     这里因为教师的表分为两个了，考虑是不是将教师的信息页分为两个部分进行修改呢？
+                                     <option value="5">名校学生</option></select>
+								</td>
+                            </tr>
+                            <tr><th>教育机构：</th>
+                                 <td><select name="edu_id">
+								     <option value="0" selected>--请选择--</option>
+<volist name="edulist" id="eli">
+    <option value="{ms:$eli.id}">{ms:$eli.name}</option>
+</volist></select>
 								</td>
                             </tr>
 							     <tr>
@@ -150,7 +113,7 @@
                             </tr>
                             <tr>
                                 <th>备注：</th>
-                                <td><textarea name="" style="width:600px; height:170px;"></textarea></td>
+                                <td><textarea name="" style="width:300px; height:100px; resize:none;"></textarea></td>
                             </tr>
                         </table>
                         <input type="hidden" name="uid" value="{ms:$info.uid}"/>
