--- a/admin/Tpl/Institution/Index.html
+++ b/admin/Tpl/Institution/Index.html
@@ -17,7 +17,7 @@
  <div class="wapper">
      <include file="Common:left" />
    <div class="right">
-          <div class="tab1"> <div class="current"><a href="__URL__/index" >教育机构列表</a>--><a>添加教育机构</a></a></div></div>
+          <div class="tab1"> <div class="current"><a href="__URL__/index" >教育机构列表</a>--><a href="__URL__/add">添加教育机构</a></a></div></div>
 		     <!-----列表页面------>
 		     <table width="93%" border="0" cellspacing="0" cellpadding="0" class="tab">
 			     <tr><th>机构ID</th><th>名称</th><th>电话</th><th>地址</th><th width="85">操作</th></tr>
