--- a/Mingshi/Tpl/Member/renzheng.html
+++ b/Mingshi/Tpl/Member/renzheng.html
@@ -545,7 +545,7 @@ $(function(){
 });
 </script>						   
                              <div class="zyxx_www">
-<form id='ryzsform' method="post" action="{ms:$Think.const.__SELF__}/test/member/add_info" enctype="multipart/form-data">
+<form id='ryzsform' method="post" action="/index.php/member/add_info" enctype="multipart/form-data">
 	<input type="hidden" name="uid" id="uid" value="" />
     <div class="zyxx_inp zyxx_285">
         <!--input type="text" value="请上传荣誉证书" class="" /-->
