--- a/Mingshi/Tpl/Member/shezhi.html
+++ b/Mingshi/Tpl/Member/shezhi.html
@@ -167,24 +167,9 @@ $(function(){
     <img class="headpic" src="__PUBLIC__/images/90_1.png" width="40" height="40" alt="头像" />
 </div>
 <div class="zyxx_inp zyxx_285 xgtx_zyxx_inp">
-    <!-- <input type="file" name="image" id="image" /><span id="tishi"></span>
-    <a class="btn" id="xgtx">上 传</a> -->
-   <form>
-    <div id="queue"></div>
-    <input id="file_upload" name="file_upload" type="file" multiple="true">
-  </form>
-
-  <script type="text/javascript">
-    
-    $(function() {
-      $('#file_upload').uploadify({
-        
-        'swf'      : 'uploadify.swf',
-        'uploader' : 'uploadify.php'
-      });
-    });
-  </script>
-</div>
+    <input type="file" name="image" id="image" /><span id="tishi"></span>
+    <a class="btn" id="xgtx">上 传</a>
+    </div>
                                     </div>                                 
                                 </div>
 </form>	
